# gift-file-type

./: .gitignore  Cargo.toml  README.md  input.txt
src/: cli_commands.rs  gift_to_excel.rs  main.rs
