[package]
name = "gift-file-type"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.3", features = ["derive"] }
csv = "1.2.2"
html-escape = "0.2.13"
regex = "1.9.5"
